--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   },
   "homepage": "https://github.com/xxhax-team/captcha-bot#readme",
   "devDependencies": {
-    "@types/mustache": "^4.0.1",
     "@types/node": "^13.7.7",
-    "@types/yaml": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "eslint": "^6.8.0",
@@ -31,19 +29,17 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.1.0",
-    "jest": "^24.9.0",
     "lint-staged": "^10.0.1",
     "prettier": "^1.19.1"
   },
   "dependencies": {
     "jimp": "^0.9.3",
     "middleware-io": "^2.5.0",
-    "mustache": "^4.0.0",
     "nodemon": "^2.0.2",
+    "ntp-client-promise": "^1.0.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3",
     "vk-io": "^4.0.0-rc.30",
-    "yaml": "^1.7.2",
     "yandex-speech-promise": "latest"
   },
   "husky": {
