--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production nodemon",
     "dev": "NODE_ENV=development nodemon",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint src/**/*.ts",
+    "docker": "ts-node ./src/index.ts"
   },
   "repository": {
     "type": "git",
