--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Bot defending chats in VK using text on images",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production nodemon",
-    "dev": "NODE_ENV=development nodemon",
+    "start": "NODE_ENV=production nodemon ./dist/index.js",
+    "dev": "NODE_ENV=development nodemon ./src/index.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
-    "docker": "NODE_ENV=production ts-node ./src/index.ts"
+    "docker": "NODE_ENV=production node ./dist/index.js",
+    "build": "tsc --project ./tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,8 @@
   },
   "homepage": "https://github.com/xxhax-team/captcha-bot#readme",
   "devDependencies": {
-    "@types/jest": "^25.2.1",
     "@types/node": "^13.7.7",
+    "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "eslint": "^6.8.0",
@@ -34,13 +35,13 @@
     "jest": "^25.3.0",
     "lint-staged": "^10.0.1",
     "prettier": "^1.19.1",
-    "ts-jest": "^25.3.1"
+    "ts-jest": "^25.3.1",
+    "ts-node": "^8.6.2"
   },
   "dependencies": {
     "jimp": "^0.9.3",
     "nodemon": "^2.0.2",
     "runtypes": "^4.2.0",
-    "ts-node": "^8.6.2",
     "typescript": "^3.8.3",
     "vk-io": "^4.0.0-rc.30",
     "yandex-speech-promise": "latest"
