--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "captcha-bot",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Bot defending chats in VK using text on images",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production nodemon ./dist/index.js",
+    "start": "NODE_ENV=production node ./dist/index.js",
     "dev": "NODE_ENV=development nodemon ./src/index.ts",
     "test": "jest --verbose --collect-coverage",
     "lint": "eslint src/**/*.ts",
-    "docker": "NODE_ENV=production node ./dist/index.js",
-    "build": "tsc --project ./tsconfig.json"
+    "build": "tsc --project ./tsconfig.json",
+    "pkg:version": "node -e 'process.stdout.write(require(\"./package.json\").version)'",
+    "docker:build": "docker build -t captcha_bot:`npm run `"
   },
   "repository": {
     "type": "git",
@@ -22,30 +23,32 @@
   },
   "homepage": "https://github.com/xxhax-team/captcha-bot#readme",
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.1.0",
-    "jest": "^25.3.0",
-    "lint-staged": "^10.0.1",
-    "prettier": "^1.19.1",
-    "ts-jest": "^25.3.1",
-    "ts-node": "^8.6.2"
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "file-type": "^16.5.0",
+    "husky": "^6.0.0",
+    "jest": "^27.0.3",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0",
+    "ts-jest": "^27.0.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@types/node": "^13.7.7",
-    "jimp": "^0.9.3",
-    "nodemon": "^2.0.2",
-    "runtypes": "^4.2.0",
-    "typescript": "^3.8.3",
-    "vk-io": "^4.0.0-rc.30",
-    "file-type": "^14.1.4",
-    "yandex-speech-promise": "latest"
+    "@xxhax/strings": "^0.0.1",
+    "jimp": "^0.16.1",
+    "nodemon": "^2.0.7",
+    "runtypes": "^6.3.0",
+    "vk-io": "^4.3.0",
+    "yaml": "^1.10.2",
+    "yandex-speech-promise": "^1.3.3"
   },
   "husky": {
     "hooks": {
@@ -61,7 +64,6 @@
   "files": [
     "src/**/*",
     "config/*",
-    "@types/*",
     "nodemon.json",
     "tsconfig.json"
   ],
@@ -98,15 +100,24 @@
       "import/no-unresolved": "off",
       "import/extensions": "off",
       "require-await": "error",
-      "radix": "error",
       "prefer-promise-reject-errors": "error",
       "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/explicit-function-return-type": "off"
-    }
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "comma-dangle": "off",
+      "camelcase": "off",
+      "radix": "off"
+    },
+    "ignorePatterns": [
+      "dist/**/*.js"
+    ]
   },
   "prettier": {
     "semi": true,
     "tabWidth": 2,
-    "useTabs": false
+    "useTabs": false,
+    "trailingComma": "none",
+    "arrowParens": "avoid",
+    "endOfLine": "lf",
+    "singleQuote": false
   }
 }
